--- a/_includes/hyvor_comments.html
+++ b/_includes/hyvor_comments.html
@@ -1,4 +1,4 @@
-<!-- Hyvor Comments. For more info visit https://talk.hyvor.com -->
+<!-- Hyvor Comments. For more info visit https://talk.hyvor.com
 
 <div id="hyvor-talk-view"></div>
 <script type="text/javascript">
@@ -19,4 +19,4 @@
     };
 </script>
 <script async type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
-
+ -->
